<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_launcher">University help</string>
    <string name="app_name">Order task</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="attach">Press to attach image/document</string>
    <string name="photo">Press to photo and attach material</string>
    <string name="zakaz">Solve task!</string>
    <string name="online">Help online!</string>
    <string name="deadline">Enter deadline of your assigment</string>
    <string name="choose_file">Choose file:</string>
    <string name="no_photo">No image is choosen</string>
    <string name="past_date">You selected past date!</string>
    <string name="deadline_word">Deadline</string>
    <string name="comment">Comments to task</string>
    <string name="comment_to_online">Comments to task, exact time of needed online help</string>
    <string name="name">Your name: </string>
    <string name="arhive_and_send">Arhive and send!</string>
    <string name="your_name">Name</string>
    <string name="your_comment">Comment to task</string>
    <string name="mail_title">Order request from android app</string>
    <string name="your_phone">Phone number</string>
    <string name="your_deadline">Deadline</string>
    <string name="enter_name">Enter your name, please!</string>
    <string name="proper_phone_needed">Enter proper phone, please</string>
    <string name="info_title">About application</string>
    <string name="info_message"> With this application you are able to order a solution of  tasks in mathematics, programming, physics, economics and many other 
        university disciplines. \n Also, you can send pre-order of the on-line help on the tests. 
        How does it work? You send us the topic and examples of tasks - we estimate the cost of the upcoming test. 
        After painment you send us your work at the beginning of  pair. Within 30-60 minutes, you get a ready-made solution of your tasks. ! 
        \n For online help, select \"Pre-order of on-line help \"</string>
    <string name="info_button">Ok!</string>
    <string name="no_file">File could not be zipped</string>
    <string name="work_type">Work type</string>
    <string name="title_activity_image_view">Add comments</string>

</resources>